--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,40 +1,42 @@
 .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 33px;
-    background-color: #1A1B4C; /* Background color of the navbar */
-    color: #fff; /* Text color */
-    padding: 10px 20px; /* Padding around the navbar */
-    display: flex; /* Use flexbox for layout */
-    justify-content: space-between; /* Align items with space between them */
-    align-items: right;
-  }
-  
-  .nav-logo a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 20px;
-  }
-  
-  .nav-links {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex-grow: 1;
-  }
-  
-  .nav-links a {
-    text-decoration: none; 
-    color: #fff;
-    padding: 10px 15px;
-    margin-left: 20px;
-    background-color: #26275F;
-    border-radius: 20px;
-    display: inline-block;
-  }
-  
-  .nav-links a:last-child {
-    margin-right: 50px;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 33px;
+  background-color: #1a1b4c; /* Background color of the navbar */
+  color: #fff; /* Text color */
+  padding: 10px 20px; /* Padding around the navbar */
+  display: flex; /* Use flexbox for layout */
+  justify-content: space-between; /* Align items with space between them */
+  align-items: right;
+  z-index: 999;
+}
+
+.nav-logo a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 15px;
+  margin-left: 20px;
+  background-color: #26275f;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+.nav-links a:last-child {
+  margin-right: 50px;
+}
+
