--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.google.com/specimen/Fredoka');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Fredoka', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #0d0d0d;
   background-color: #242424;
 
   font-synthesis: none;
@@ -13,13 +15,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  text-shadow: 0px 0px 8px #914b6f;
 }
 
 body {
@@ -28,6 +37,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #fafafa;
 }
 
 h1 {
@@ -76,4 +86,83 @@ svg rect {
 svg path:hover,
 svg rect:hover {
   fill: #651940; /* Or your desired highlight color */
+}
+
+/* homepage */
+
+.hero-container{
+  width: 80vw;
+  text-align: left;
+  position: relative;
+  margin: 0px;
+}
+
+.home-text {
+  z-index: 1;
+  position: absolute;
+  top: 150px;
+  color: rgba(255, 255, 255, 0.87);
+}
+
+.home-title {
+  font-size: 124px;
+  line-height: 120px;
+  font-weight: 800;
+}
+
+.home-subtitle {
+  font-size: 36px;
+  padding-left: 24px;
+  font-weight: 600;
+}
+
+.mascot {
+  width: 84vh;
+  float: right;
+  position: absolute;
+  margin-left: 240px;
+  right: 110px;
+  bottom: 50px;
+}
+
+.waves {
+  margin-left: -140px;
+  margin-bottom: -10px;
+}
+
+.svgwaves {
+  stroke-dasharray: 8400;
+  stroke-width: 4;
+  stroke:#26275F;
+  animation: draw-and-fill-blue 1.6s ease-in-out 0s forwards;
+}
+
+@keyframes draw-and-fill-blue {
+  0% {
+    stroke-dashoffset: 8400;
+    fill: transparent;
+  }
+  75% {
+    stroke-dashoffset: 0;
+    fill: transparent;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill: #26275F;
+  }
+}
+
+@keyframes draw-and-fill-red {
+  0% {
+    stroke-dashoffset: 8400;
+    fill: transparent;
+  }
+  75% {
+    stroke-dashoffset: 0;
+    fill: transparent;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill: #651940;
+  }
 }
