--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -11,12 +11,16 @@
   justify-content: space-between; /* Align items with space between them */
   align-items: right;
   z-index: 999;
+  padding: 2.5% 2% 2.5% 2%;
 }
 
-.nav-logo a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 20px;
+.logo-hero{
+  margin-left: 10%;
+  height: 160%;
+}
+
+.logo-hero:hover {
+  filter: drop-shadow(0 0 0.8em #4c1330);
 }
 
 .nav-links {
@@ -24,16 +28,32 @@
   justify-content: flex-end;
   align-items: center;
   flex-grow: 1;
+  margin-right: 2.4%;
 }
 
 .nav-links a {
   text-decoration: none;
   color: #fff;
-  padding: 10px 15px;
+  padding: 4px;
   margin-left: 20px;
   background-color: #26275f;
   border-radius: 20px;
   display: inline-block;
+  font-size: 24px;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-align: center;
+  box-shadow: 0px 8px 8px #161742;
+
+  transition: padding 0.24s;
+  transition: font-size 0.16s;
+}
+
+.nav-links a:hover{
+  font-size: 28px;
+  padding: 8px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .nav-links a:last-child {
