--- a/src/index.css
+++ b/src/index.css
@@ -164,12 +164,26 @@ svg rect:hover {
 
 #map-container {
   width: 100vw;
+  height: 100vh;
   margin: 0 auto;
   text-align: center;
+  overflow: hidden;
 }
 
-aside {
-  width: 25%;
-  float: right;
-  transition: 0.5s ease;
+.sidebar {
+  position: fixed;
+  right: -35vw; /* Adjust width as needed */
+  top: 0;
+  height: 100%;
+  width: 35vw; /* Adjust width as needed */
+  background-color: #383965;
+  color: white;
+  box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.2);
+  transition: right 0.3s ease-in-out;
+  z-index: 1000; /* Ensure it's on top of the map */
+}
+
+.sidebar.open {
+  right: 0;
+  margin-top: 6rem;
 }
