added css for buttons

--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -33,29 +33,95 @@
 }
 
 .building-picture {
-  height: 20%;
+  height: 23%;
   width: 100%;
 }
 
 .building-name {
-  font-size: xx-large;
-  margin-bottom: 2%;
+  padding: 3%;
+  font-size: xxx-large;
 }
 
 .building-desc {
-  margin-top: 1rem;
+  padding: 3%;
 }
 
 .building-details {
   display: flex;
   flex-direction: column;
+  margin-bottom: 1rem;
 }
 
+
 .restroom-list {
+  padding: 3%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
+
+.toilet-button {
+  border-radius: 50px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 9px 23px;
+  position: relative;
+  background-color: #ffffff;
+}
+
+.toilet-button .frame {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.toilet-button .text {
+  position: relative;
+  width: 190px;
+  height: 34px;
+  margin-top: -1px;
+  font-family: "Young Serif-Regular", Helvetica;
+  font-weight: 400;
+  color: #383965;
+  font-size: 25px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.toilet-button .div {
+  display: inline-flex;
+  align-items: center;
+  gap: 39px;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.toilet-button .stars {
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.toilet-button .text-wrapper {
+  width: 109px;
+  height: 22px;
+  margin-top: -1px;
+  font-family: "Visby Round CF-ExtraBold", Helvetica;
+  font-weight: 800;
+  color: #383965;
+  font-size: 20px;
+  text-align: right;
+  letter-spacing: 0;
+  line-height: normal;
+  white-space: nowrap;
+}
+
+
+
+
 
 .column {
   display: flex;
