--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -15,8 +15,9 @@
 }
 
 .logo-hero{
-  margin-left: 10%;
-  height: 160%;
+  margin-left: 5%;
+  margin-top: -5%;
+  height: 240%;
 }
 
 .logo-hero:hover {
