--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   line-height: 1.1;
 }
 
@@ -121,6 +121,12 @@ svg rect:hover {
   margin-left: 240px;
   right: 110px;
   bottom: 50px;
+}
+
+.mascot-login, .mascot-register {
+  width: 16vh;
+  position: static;
+ 
 }
 
 .waves {
@@ -222,4 +228,148 @@ svg rect:hover {
   margin: 0 auto;
   text-align: center;
   overflow: hidden;
+}
+
+/* Login Page */
+.login-page-body {
+  background-color: #651940;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.login-container label {
+  text-align: left;
+}
+
+.login-container,
+.register-container {
+  width: 50vw;
+  border-radius: 16px;
+  background-color:#26275f;
+  padding: 32px 24px;
+  text-align: center;
+}
+
+.login-container h1,
+.register-container h1 {
+  color: white;
+  text-align: center;
+  margin-top: 0;
+}
+
+.register-container form,
+.login-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.register-container form label,
+.login-container form label {
+  color: white;
+  font-weight: 700;
+  padding: 0 12px;
+}
+
+.register-container form label[for='pass'],
+.login-container form label[for='pass'] {
+  margin-top: 16px;
+}
+
+.register-container form input,
+.login-container form input {
+  background-color: white;
+  border-radius: 16px;
+  padding: 16px 12px;
+  color: #0d0d0d;
+}
+
+.login-page-body .login-actions {
+  margin-top: 32px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 16px;
+}
+
+.login-page-body .login-actions button,
+.login-page-body .login-actions a {
+  border-radius: 30px;
+  flex-grow: 1;
+  padding: 16px 12px;
+  text-align: center;
+  font-size: 1.24rem;
+}
+
+.login-page-body .login-actions button {
+  background-color: #F0C7A7;
+}
+
+.login-page-body .login-actions a {
+  border: 2px solid #F0C7A7;
+  color: white;
+}
+
+aside.sidebar {
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  grid-row-gap: 16px;
+}
+
+aside.sidebar #back-arrow {
+  left: -48px;
+  top: -40px;
+  padding: 24px;
+  width: 100px;
+  background: white;
+  border-radius: 50%;
+}
+
+aside.sidebar .review-list {
+  display: grid;
+  grid-row-gap: 16px;
+  grid-auto-flow: row;
+  margin: 0 12px;
+}
+
+aside.sidebar .review-container {
+  background-color:#fafafa;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  border-radius: 12px;
+  padding: 12px 16px;
+}
+
+aside.sidebar .review-container .review-author + span {
+  height: 36px;
+}
+
+aside.sidebar .review-container .star-svg {
+  width: 20px;
+}
+
+aside.sidebar .restroom-details h3 {
+  text-align: center;
+}
+
+.tags {
+  padding: 24px 12px;
+}
+
+.tags .tag {
+  border-radius: 20px;
+  background-color: white;
+  color:#26275f;
+  padding: 12px 16px;
+}
+
+.tags .tag + .tag {
+  margin-left: 8px;
+}
+
+.dropdown {
+  padding: 24px 12px;
 }
