--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -78,7 +78,7 @@
   padding: 16px 24px;
   position: relative;
   background-color: #ffffff;
-  height: 116px;
+  /* height: 116px; */
 }
 
 .restroom-item .frame {
