--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -1,72 +1,86 @@
 .profile-container {
-    background-color: 914B6F;
+  background-color: 914B6F;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  width: 100vw;
+  height: 100vh;
 }
 
 .profile-split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-  }
-
+  height: 100%;
+  overflow: hidden;
+}
 
 .left {
-    padding-top: 30%;
-    top: 0;
-    background-color: #F0C7A7;
-    left: 0;
-    text-align: center;
+  padding-top: 30%;
+  top: 0;
+  background-color: #f0c7a7;
+  left: 0;
+  text-align: center;
 }
 
 .right {
-    padding-top: 10%;
-    padding-left: 5%;
-    top: 0;
-    background-color: #914B6F;
-    right: 0;
+  padding-top: 10%;
+  padding-left: 5%;
+  top: 0;
+  background-color: #914b6f;
+  right: 0;
+  overflow-y: scroll;
 }
 
 .profile-username {
-    font-size: xx-large;
-    font-weight: bold;
+  font-size: xx-large;
+  font-weight: bold;
 }
 
 .profile-reviewCount {
-    font-size: large;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  font-size: large;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .profile-right-header {
-    text-align: left;
-    font-weight: bold;
-    font-size: xx-large;
+  text-align: left;
+  font-weight: bold;
+  font-size: xx-large;
 }
 
+.right-split-wrapper {
+  margin: auto;
+  width: 75%;
+}
 .profile-review-list {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .review-box {
-    background-color: white;
-    padding: 20px;
-    margin-bottom: 10px;
-    border-radius: 30px;
-    width: 50%;
+  background-color: white;
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 30px;
+  box-shadow: 11px 10px 12px -11px rgba(45, 5, 51, 0.75);
 }
 
 /* for the review box content */
 
 .review-header {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .review-subheader {
-  }
-  
-  .review-description {
-    font-size: 16px;
-    color: #333;
-  }
+  font-size: 3.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.review-header-name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.review-subheader {
+}
+
+.review-description {
+  font-size: 16px;
+  color: #333;
+}
