--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -23,3 +23,51 @@
   line-height: 1.6;
   margin-bottom: 20px;
 }
+
+/* team member cards */
+.team-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.team-cards-container h2 {
+  color: #F0C7A7
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.team-cards-container p {
+  font-size: 10px;
+}
+
+.team-member {
+  flex: 0 0 20%;
+  padding: 20px;
+  box-sizing: border-box;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team-member img {
+  background-color: white;
+  max-width: 200px;
+  max-height: 200px;
+  width:auto;
+  height:auto;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.team-member h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.team-member p {
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.5;
+}
+/* end of team member cards */
