Fix font loading

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.google.com/specimen/Fredoka');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 @font-face {
   font-family: 'Bubbly';
   src: url('./fonts/Bubbly.otf') format('opentype');
