--- a/src/index.css
+++ b/src/index.css
@@ -88,17 +88,6 @@ svg rect:hover {
   fill: #651940; /* Or your desired highlight color */
 }
 
-/* Map  */
-#map-container {
-  width: 100vw;
-  height: 200vh;
-  margin: 0 auto;
-  text-align: center;
-  overflow: hidden;
-  padding-top: 5vh;
-  scale: 1.0;
-}
-
 /* Login Page */
 .login-page-body {
   background-color: #651940;
@@ -108,9 +97,11 @@ svg rect:hover {
   align-items: center;
   width: 100vw;
   height: 100vh;
+  z-index: 200;
 }
 
-.login-container label {
+.login-container label,
+.register-container label {
   text-align: left;
 }
 
@@ -121,6 +112,9 @@ svg rect:hover {
   background-color:#26275f;
   padding: 32px 24px;
   text-align: center;
+  position: relative;
+  bottom: 6%;
+  box-shadow: 0.7vw 1.6vh 4px #11113f9e;
 }
 
 .login-container h1,
