--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -31,7 +31,7 @@
 }
 
 .team-cards-container h2 {
-  color: #F0C7A7
+  color: #F0C7A7;
   font-size: 25px;
   font-weight: bold;
   margin-bottom: 20px;
@@ -51,16 +51,18 @@
 
 .team-member img {
   background-color: white;
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 120px;
+  max-height: 120px;
+  min-width: 120px;
+  min-height: 120px;
   width:auto;
   height:auto;
   border-radius: 50%;
-  margin-bottom: 20px;
 }
 
 .team-member h2 {
-  font-size: 24px;
+  text-align: center;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
 }
